--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/searchFragment"
+        android:id="@+id/searchFragment2"
         android:icon="@drawable/search_off"
         android:title="Поиск"/>
     <item
-        android:id="@+id/saveFragment"
+        android:id="@+id/saveFragment2"
         android:icon="@drawable/save_off"
         android:title="Избранное"/>
     <item
-        android:id="@+id/callbackFragment"
+        android:id="@+id/callbackFragment2"
         android:icon="@drawable/callback_off"
         android:title="Отклики"/>
     <item
-        android:id="@+id/messageFragment"
+        android:id="@+id/messageFragment2"
         android:icon="@drawable/message_off"
         android:title="Сообщения"/>
     <item
-        android:id="@+id/profileFragment"
+        android:id="@+id/profileFragment2"
         android:icon="@drawable/profile_off"
         android:title="Профиль"/>
 </menu>
