--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_menu"
-        android:elevation="0dp" />
+        app:itemActiveIndicatorStyle="@style/Theme.BottomNavigationView.ActiveIndicator"
+        app:itemIconTint="@color/bottom_menu_selected_item"
+        app:itemTextColor="@color/bottom_menu_selected_item"
+        app:itemTextAppearanceActive="@style/Theme.TestHH1"
+        >
+
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:dividerColor="@color/text_gray"/>
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
