--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#222325</color>
+    <color name="text_gray">#858688</color>
+    <color name="green">#4CB24E</color>
+    <color name="blue">#00427D</color>
 </resources>
