--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.TestHH1" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorSecondary">@color/white</item>
     </style>
 
-    <style name="Theme.TestHH1" parent="Base.Theme.TestHH1" />
+    <style name="Theme.TestHH1" parent="Base.Theme.TestHH1">
+        <item name="android:background">@color/black</item>
+    </style>
+
+    <style name="Theme.BottomNavigationView.ActiveIndicator" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="android:color">@color/black</item>
+    </style>
 </resources>
