--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,6 @@
         android:layout_height="0dp"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph"
-
         app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,8 +32,7 @@
         app:itemActiveIndicatorStyle="@style/Theme.BottomNavigationView.ActiveIndicator"
         app:itemIconTint="@color/bottom_menu_selected_item"
         app:itemTextColor="@color/bottom_menu_selected_item"
-        app:itemTextAppearanceActive="@style/Theme.TestHH1"
-        >
+        app:itemTextAppearanceActive="@style/Theme.TestHH1">
 
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/divider"
@@ -44,7 +42,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:dividerColor="@color/text_gray"/>
-
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
